--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "crypto": "^1.0.1",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
