--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
     "crypto": "^1.0.1",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
@@ -14,8 +15,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.7.2",
-    "style-loader": "0.13.1"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
