--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
+    "qrcode.react": "^0.7.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-pager": "^1.3.3",
